@@ -6,13 +6,8 @@ except:
 import logging
 import datetime
 from socket import error as SocketError
-from django.conf import settings
-from django.core.mail import EmailMessage
-from django.template import loader, Context
-from django.utils.translation import ugettext as _
 from satchmo.contact.models import OrderItem, OrderItemDetail
 from satchmo.shipping.utils import update_shipping
-from satchmo.shop.models import Config
 
 log = logging.getLogger('payment.common.pay_ship')
 
@@ -34,32 +29,6 @@ def pay_ship_save(new_order, cart, contact, shipping, discount, update=False):
         new_order.discount_code = ""
 
     update_orderitems(new_order, cart, update=update)
-
-
-def send_order_confirmation(new_order, template='email/order_complete.txt'):
-    """Send an order confirmation mail to the customer.
-    """
-    shop_config = Config.get_shop_config()
-    shop_email = shop_config.store_email
-    shop_name = shop_config.store_name
-    t = loader.get_template(template)
-    c = Context({'order': new_order, 'shop_name': shop_name})
-    subject = _("Thank you for your order from %(shop_name)s") % {'shop_name' : shop_name}
-
-    try:
-        customer_email = new_order.contact.email
-        body = t.render(c)
-        message = EmailMessage(subject, body, shop_email, [customer_email])
-        message.send()
-
-    except SocketError, e:
-        if settings.DEBUG:
-            log.error('Error sending mail: %s' % e)
-            log.warn('Ignoring email error, since you are running in DEBUG mode.  Email was:\nTo:%s\nSubject: %s\n---\n%s', customer_email, subject, body)
-        else:
-            log.fatal('Error sending mail: %s' % e)
-            raise IOError('Could not send email, please check to make sure your email settings are correct, and that you are not being blocked by your ISP.')
-
 
 def update_orderitem_details(new_order_item, item):
     """Update orderitem details, if any.
