@@ -15,12 +15,6 @@ config_register([
         description=_("Accept real payments"),
         help_text=_("False if you want to be in test mode"),
         default=False),
-
-    BooleanValue(PAYMENT_GROUP, 
-        'EMAIL', 
-        description=_("Send order emails"),
-        help_text=_("True if you want to send emails to customers on order"),
-        default=False),
         
     ModuleValue(PAYMENT_GROUP,
         'MODULE',
